Revision history for Perl extension PGXN::API

0.16.3

0.16.2  2012-02-14T06:46:47Z
      - Empty Documentation files are no longer indexed or displayed.
      - All files extracted from distribution zip files into the source
        directory are now globally readable. This behavior eliminates
        permissions errors when the user that serves the files is different
        than the one that unzipped them.
      - Files specified in the `docfile` key are now ignored if Text::Markup
        does not recognize, since the cannot then be parsed for serving as
        HTML.
      - Worked around an [Archive::Zip
        bug](https://rt.cpan.org/Ticket/Display.html?id=74255.) when reading
        the README file for indexing.

0.16.1  2012-01-10T04:30:02Z
      - Added `version_string` class method to PGXN::API. It should always be
        used for displaying the version.
      - Added `Capfile` for capistrano deployment.
      - Added `eg/debian_init`, an example init script for Debian that runs
        PGXN::API on Starman.
      - Added `eg/pgxn_sync`, an example shell script that syncs from a local
        master mirror.

0.16.0  2011-08-26T17:29:00Z
      - Eliminated "Use of uninitialized value in subroutine entry" warning
        when indexing a user with no associated URI.
      - If an version of an extension is deleted from the mirror extension
        JSON file, it will now also be deleted from the API doc root's
        extension JSON file (Issue #8).
      - Requiring Text::Markup 0.13, as it has an important fix for parsing
        Pod.
      - Upgraded from KinoSearch to Lucy.

0.15.0  2011-05-12T18:40:43
      - Changed the JSONP callback parameter from "jsonp" to "callback".

0.14.1  2011-05-12T18:11:02
      - Changed mentions of `pgxn_apid` to the correct `pgxn_api_server` in
        `pgxn_api_server` docs.
      - Backported to support Perl 5.10.

0.14.0  2011-05-03T00:09:13