@@ -51,7 +51,7 @@ my $build = $class->new(
         'Plack::Middleware::JSONP'     => 0,
         'Plack::Builder'               => 0,
         'Text::Markup'                 => '0.15',
-        'URI::Template'                => '0.15',
+        'URI::Template'                => '0.16',
         'XML::LibXML'                  => '1.70',
     },
     recommends => {
